# shrinkr

./: .clangd  .gitignore  .pre-commit-config.yaml  Doxyfile  LICENSE  NEWS.md  README.md  mkdocs.yml  pyproject.toml  setup.py
.devel/: generate_figure.py  usage.py
.devel/bench/: benchmark_lw_analytical.py  benchmark_methods.py  manual_benchmark_methods.py  pytest_bench_methods.py
.devel/bench/data/: consts.py  gen_data.py
.devel/pytest/: test_c_impl.py  test_losses.py  test_monte_carlo.py  test_references.py
.devel/scripts/: bench.sh  bench_c.sh  cleanup.sh  serve_docs.sh  test.sh  test_all.sh  up.sh
.devel/tests/: test_c_impl.py  test_c_impl_hypothesis.py  test_e2e.py  test_losses.py  test_monte_carlo.py  test_references.py
.github/workflows/: docs.yml  lint.yml  tests.yml
docs/: api.md  c-main.dox  groups.dox  hooks.py  index.md
docs/stylesheets/: extra.css
shrinkr/: __init__.py  _native.pyi  base.py  bindings.c  cov.py  lda.py  monte_carlo.py
shrinkr/functional/: __init__.py  _deal.py  _losses.py  _lw_analytical.py  _lw_linear.py  _oas.py  deal.py  losses.py  lw_analytical.py  lw_linear.py  oas.py
shrinkr/reference/: __init__.py  _deal.py  _lw_analytical.py  _lw_linear.py  _oas.py  deal.py  lw_analytical.py  lw_linear.py  oas.py
src/: benchmark.cpp  c_shrinkr.c  c_shrinkr.h
