[project]
name = "shrinkr"
version = "0.1.0"
description = "Package for covariance matrix shrinkage estimation."
readme = "README.md"
authors = [
    { name = "ZetrextJG", email = "jakubzgrzywaczewski@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0.0rc1",
  "setuptools",
]

[build-system]
requires = ["setuptools>=69", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "hypothesis>=6.155.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.14",
    "scikit-learn>=1.9.0",
    "setuptools>=82.0.1",
    "tqdm>=4.68.2",
    "ty>=0.0.49",
    "wheel>=0.47.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[tool.pytest.ini_options]
testpaths = [".devel/tests"]
markers = [
    "unit: unit tests",
    "prop: property-based tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # bugbear
    "UP",  # pyupgrade
    "D",   # docstring
]

ignore = [
    "E501",  # handled by formatter
    "D202",  # whitespace after docstings
    "D203", "D212" # conflicting docstring rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
".devel/**/*.py" = ["D"] # no docstrings for tests needed
